# keepass-2-file

./: .gitignore  Cargo.toml  Changelog.md  README.md  codecov.yml  flake.nix  justfile  kp2f.afdesign  release.md  renovate.json
.github/workflows/: nix.yml  release.yaml  rust.yml
crates/test_helpers/: Cargo.toml
crates/test_helpers/src/: lib.rs  tmp_file.rs
samples/: flake.nix
src/: main.rs
src/app/: commands.rs  config.rs  errors_and_warnings.rs  handlebars.rs  logs_prefix.rs  mod.rs  test_config.rs  test_helpers.rs  tools.rs
src/app/config/: mod.rs  yaml.rs
test_resources/: .env.all-errors  .env.example  0-with-errors  1-with-other-errors  file-with-error  test_db.kdbx  with_variables
tests/: completion.rs  config-upgrade.rs
