[package]
name = "keepass-2-file"
version = "0.3.0"
edition = "2021"

[dependencies]
keepass = "0.7.26"
serde = { version = "1.0.0", features=["derive"] }
serde_json = "1.0.39"
handlebars="6.2.0"
clap = { version = "4.5.21", features = ["derive"] }
serde_yaml = "0.9.34"
rpassword = "7.3.1"
dirs = "6.0.0"
uuid = "1.16.0"
